# QRLand

./: .gitignore  CMakeLists.txt  Doxyfile  QRConstants.cpp  QRConstants.h  QTIncludes.h  README.md  config (copy).txt  config.txt  configManager.cpp  configManager.h  globalConfig.h  globalDefines.h  line_counter.py  loadConfig.cpp  loadConfig.h  main.cpp  static.sh  style.css
2D_draw_module/: Axis.cpp  Axis.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Canvas3DViewer.cpp  Canvas3DViewer.h  CanvasBuilder.cpp  CanvasBuilder.h  DrawStyles.cpp  DrawStyles.h  PolyBuilder.cpp  PolyBuilder.h
2D_draw_module/common/: CMakeLists.txt  QRLayoutManager.cpp  QRLayoutManager.h  QRLayoutNode.h  ThreadFunctionCall.cpp  ThreadFunctionCall.h
2D_draw_module/figures/: AlgoedCircle.cpp  AlgoedCircle.h  AlgoedEllipse.cpp  AlgoedEllipse.h  AlgoedLine.cpp  AlgoedLine.h  BridgePolyFiller.cpp  BridgePolyFiller.h  CMakeLists.txt  DropPolyFiller.cpp  DropPolyFiller.h  Figures.cpp  Figures.h  Function3D.cpp  Function3D.h  LineCutter.cpp  LineCutter.h  Matrix.cpp  Matrix.h  PolygonCutter.cpp  PolygonCutter.h  Primitives.cpp  Primitives.h  baseAlgos.cpp  baseAlgos.h
2D_draw_module/widgets/: CMakeLists.txt  CustomDoubleValidator.h  LineSpacer.cpp  MultiRadioField.cpp  MultiRadioField.h  QRLabel.h  QRadioField.cpp
3Domain/: 3Domain.h  CMakeLists.txt  Doxyfile  Lab3Facade.cpp  Lab3Facade.h  Painter.h  QRConstants.h  QRDefines.h  QRPainter.h
3Domain/containers/: CMakeLists.txt  QRContainerAdapter.cpp  QRContainerAdapter.h  QRContainers.h
3Domain/containers/QRExceptions/: HashTableError.cpp  HashTableError.h  QRContainerException.cpp  QRContainerException.h  SetError.cpp  SetError.h
3Domain/containers/QRHashTable/: CMakeLists.txt  HashNode.h  HashTableBase.cpp  HashTableBase.h  HashTableIterator.h  QRHashTable.h  QRHashTableIterator.h
3Domain/containers/QRMap/: CMakeLists.txt  QRMap.h  QRMapBase.h  QRMapIterator.h  QRMapNode.h
3Domain/containers/QRPair/: CMakeLists.txt  QRPair.h
3Domain/containers/QRSet/: CMakeLists.txt  QRSet.h  QRSetBase.cpp  QRSetBase.h  Set.h  SetBase.h
3Domain/containers/QRVector/: CMakeLists.txt  QRDuoVectorIterator.h  QRQueue.h  QRStack.h  QRVector.h  QRVectorIterator.h  Vector.h  VectorBase.cpp  VectorBase.h
3Domain/containers/exceptions/: CMakeLists.txt  QRContainerException.cpp  QRContainerException.h  SetError.cpp
3Domain/exceptions/: CMakeLists.txt  QRException.cpp  QRException.h
3Domain/managers/: CMakeLists.txt  CareTaker.cpp  CareTaker.h  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  QRManagers.h  SceneDrawMethod.cpp  SceneDrawMethod.h
3Domain/managers/commands/: Command.cpp  Command.h  (+6 more)
3Domain/math/: CMakeLists.txt  Functions.cpp  Functions.h  Matrix3D.cpp  Matrix3D.h  QRMath.h  Transformer3D.cpp  Transformer3D.h  Vector3D.cpp  Vector3D.h
3Domain/objects/: BaseObject.h  CMakeLists.txt  Camera3D.cpp  Camera3D.h  Edge3D.cpp  Edge3D.h  Industry.h  Point3D.cpp  Point3D.h  QRObject.h  QRObjects.h  objects.h
3Domain/renderStuff/: CMakeLists.txt  QRPolyRectCutter.h  QRasterizeZBuffer.cpp  QRasterizeZBuffer.h
3Domain/textures/: CMakeLists.txt  QRColor.cpp  QRColor.h  QRTexture.h  textures.h
controlStuff/: CMakeLists.txt  renderStuff.h
controlStuff/managers/: CMakeLists.txt  QRManagers.h
controlStuff/renderStuff/: CMakeLists.txt  QRColorManager.cpp  QRColorManager.h  QRLightManager.cpp  QRLightManager.h  QRPolyRectCutter.cpp  QRPolyRectCutter.h  QRasterizeZBuffer.cpp  QRasterizeZBuffer.h  QRender.cpp  QRenderer.cpp  QRenderer.h  renderConfig.h
gui/: CMakeLists.txt  Controller.cpp  Controller.h  MainWindow.cpp  MainWindow.h  Presenter.cpp  Presenter.h  QTIncludes.h  QTPainter.cpp  QTPainter.h  style.css
gui/oop_lab3/: MainWindow.cpp  MainWindow.h  Presenter.cpp  Presenter.h  QTPainter.cpp  QTPainter.h
gui/prod/: ActionManager.cpp  ActionManager.h  EditorHMapWidget.cpp  EditorHMapWidget.h  EditorMiscWidget.cpp  EditorMiscWidget.h  EditorPresenter.cpp  EditorPresenter.h  EditorWaterWidget.cpp  EditorWaterWidget.h  EditorWindow.cpp  EditorWindow.h  Facade.cpp  Facade.h  MainWindow.cpp  MainWindow.h  NewModelStartWindow.cpp  NewModelStartWindow.h  PlatesWindow.cpp  PlatesWindow.h  QRToolFrame.cpp  QRToolFrame.h
gui/views/: CMakeLists.txt  InputWidget.h  QRMenu.cpp  QRMenu.h  QRSettings.cpp  QRSettings.h  QRViews.h
gui/widgets/: CMakeLists.txt  ColorEdit.cpp  ColorEdit.h  CustomDoubleValidator.cpp  CustomDoubleValidator.h  LineSpacer.h  MultiRadioField.cpp  MultiRadioField.h  QRDoubleValidator.h  QRInput.cpp  QRInput.h  QRLabel.cpp  QRWidgets.h  QRadioField.cpp  QRadioField.h  Themes.cpp  Themes.h
gui/wip1/: Facade.cpp  Facade.h  MainWindow.cpp  MainWindow.h  Presenter.cpp  Presenter.h
gui/wip2/: Facade.cpp  Facade.h  MainWindow.cpp  MainWindow.h  Presenter.cpp  Presenter.h
landscape/: CMakeLists.txt  QRLandscape.h  QRLandscapeSurface.cpp  QRLandscapeSurface.h  QRLandscapeSurfaceCreator.cpp  QRVoxelRow.h  QRVoxelTexture.cpp  landscapeConfig.h  random_generator.cpp  random_generator.h
landscape/ROAM/: RoamConfig.h  RoamLandscape.cpp  RoamLandscape.h  RoamLandscapeCreator.cpp  RoamLandscapeCreator.h  RoamTree.cpp  RoamTree.h
landscape/basic/: QRLandscapeSurface.cpp  QRLandscapeSurface.h  QRLandscapeSurfaceCreator.cpp  QRLandscapeSurfaceCreator.h  QRLandscapeTexture.cpp  QRLandscapeTexture.h  QRMaterial.h
landscape/climate/: ClimateConfig.h  ClimateManager.cpp  ClimateManager.h
landscape/decoration/: TopDownVisualizer.cpp  TopDownVisualizer.h
landscape/disturbance/: disturbance.cpp  disturbance.h
landscape/managers/: CMakeLists.txt  LandscapeBuilder.cpp  LandscapeBuilder.h  PlateManager.cpp  PlateManager.h  SaveLoadManager.cpp  SaveLoadManager.h
landscape/water/: WaterConfig.h  WaterErosion.cpp  WaterManager.cpp  WaterManager.h  WaterSource.cpp  WaterSource.h
tests/: CMakeLists.txt  TimeTest.cpp  TimeTest.h  test.cpp
tests/containers/: hashTableIteratorTest.cpp  hashTableTest.cpp  mapTest.cpp  setTest.cpp  vectorTest.cpp
tests/landscape/: landscapeTest.cpp
tests/math/: mathTest.cpp
tests/objects/: objectsTest.cpp
(+435 files in other folders)
